fixed gap in run section

--- a/style.css
+++ b/style.css
@@ -234,8 +234,8 @@ body {
     margin: 0 auto;
     margin-bottom: 100px;
     display: flex;
-    /* gap: 165px; */
-    justify-content: space-between;
+    gap: 165px;
+    /* justify-content: space-between; */
     align-items: center;
     background-color: rgba(34, 34, 34, 1);
     border-radius: 18px; 
